Add final pages
The following pages were added: 22 to 32.

An All-In-One page was added.

Some minor changes were made to some pages.

Some classes were added to styles.css

--- a/03.html
+++ b/03.html
@@ -1,45 +1,46 @@
-<!DOCTYPE html>
-<html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta name="description" content="">
-        <meta name="author" content="">
-        <title>03</title>
-        <!-- Bootstrap core CSS -->
-        <link href="bootstrap/css/bootstrap.css" rel="stylesheet">
-        <!-- Custom styles for this template -->
-        <link href="style.css" rel="stylesheet">
-        <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+<!DOCTYPE html> 
+<html lang="en"> 
+    <head> 
+        <meta charset="utf-8"> 
+        <meta http-equiv="X-UA-Compatible" content="IE=edge"> 
+        <meta name="viewport" content="width=device-width, initial-scale=1"> 
+        <meta name="description" content=""> 
+        <meta name="author" content=""> 
+        <title>03</title>         
+        <!-- Bootstrap core CSS -->         
+        <link href="bootstrap/css/bootstrap.css" rel="stylesheet"> 
+        <!-- Custom styles for this template -->         
+        <link href="style.css" rel="stylesheet"> 
+        <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->         
         <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
-    </head>
-    <body class="">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-12 col-sm-12 col-xs-12 col-lg-12">
+    <![endif]-->         
+    </head>     
+    <body>
+        <a name="01"></a> 
+        <div class="container"> 
+            <div class="row"> 
+                <div class="col-md-12 col-sm-12 col-xs-12 col-lg-12"> 
                     <h1 class="blue">Welcome</h1> 
-                </div>
+                </div>                 
                 <div class="col-md-6 col-xs-12 col-sm-12 col-lg-6"> 
                     <h2 class="grey">DON’T FALL
-FOR IT!</h2>
+FOR IT!</h2> 
                     <h2 class="grey">It’s time to tackle
 some myths about
-falling</h2>
+falling</h2> 
                     <h3 class="blue">Only really frail or infirm
-people fall, don’t they?<br></h3>
+people fall, don’t they?<br></h3> 
                     <p>Not at all. One in three people
 over 65 – plenty of them in
 decent health – will have a fall
 this year. However it’s true that
 our risk of falling increases as
 we age: half of all people over
-80 will fall at least once a year.&nbsp;<br></p>
+80 will fall at least once a year.&nbsp;<br></p> 
                     <h3 class="blue">It’s just an inevitable part of
-getting older, isn’t it?<br></h3>
+getting older, isn’t it?<br></h3> 
                     <p>Not necessarily. Experts believe
 the vast majority of falls could
 be prevented with some fairly
@@ -48,33 +49,33 @@ and homes. Medically speaking,
 though, falls are often a warning
 sign that something isn’t quite
 right – but it’s often something
-quite treatable.<br></p>
-                </div>
-                <div class="col-md-6 col-lg-6 col-sm-12 col-xs-12">
-                    <a href="http://saga.co.uk/falls" class="" target="_blank">
-                        <img src="img/03a.png" class="img-responsive">
-                    </a>
-                    <h3 class="blue">How do I know my risk?</h3>
+quite treatable.<br></p> 
+                </div>                 
+                <div class="col-md-6 col-lg-6 col-sm-12 col-xs-12"> 
+                    <a href="http://saga.co.uk/falls" class="" target="_blank"> 
+                        <img src="img/03a.png" class="img-responsive"> 
+                    </a>                     
+                    <h3 class="blue">How do I know my risk?</h3> 
                     <p>Go through our checklist
 overleaf: you might be
 surprised by how many
-boxes you tick.<br></p>
+boxes you tick.<br></p> 
                     <p>Then take a few minutes to read
 this booklet. With falls robbing
 many older people of their hardwon
 health and independence,
 – and costing us all £2.3 billion
 a year – it could be the most
-valuable time you spend today<br></p>
-                </div>
-            </div>
-        </div>
+valuable time you spend today<br></p> 
+                </div>                 
+            </div>             
+        </div>         
         <!-- Bootstrap core JavaScript
-    ================================================== -->
-        <!-- Placed at the end of the document so the pages load faster -->
-        <script src="assets/js/jquery.min.js"></script>
-        <script src="bootstrap/js/bootstrap.min.js"></script>
-        <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-        <script src="assets/js/ie10-viewport-bug-workaround.js"></script>
-    </body>
+    ================================================== -->         
+        <!-- Placed at the end of the document so the pages load faster -->         
+        <script src="assets/js/jquery.min.js"></script>         
+        <script src="bootstrap/js/bootstrap.min.js"></script>         
+        <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->         
+        <script src="assets/js/ie10-viewport-bug-workaround.js"></script>         
+    </body>     
 </html>
