--- a/05.html
+++ b/05.html
@@ -1,140 +1,140 @@
-<!DOCTYPE html>
-<html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta name="description" content="">
-        <meta name="author" content="">
-        <title>05</title>
-        <!-- Bootstrap core CSS -->
-        <link href="bootstrap/css/bootstrap.css" rel="stylesheet">
-        <!-- Custom styles for this template -->
-        <link href="style.css" rel="stylesheet">
-        <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+<!DOCTYPE html> 
+<html lang="en"> 
+    <head> 
+        <meta charset="utf-8"> 
+        <meta http-equiv="X-UA-Compatible" content="IE=edge"> 
+        <meta name="viewport" content="width=device-width, initial-scale=1"> 
+        <meta name="description" content=""> 
+        <meta name="author" content=""> 
+        <title>05</title>         
+        <!-- Bootstrap core CSS -->         
+        <link href="bootstrap/css/bootstrap.css" rel="stylesheet"> 
+        <!-- Custom styles for this template -->         
+        <link href="style.css" rel="stylesheet"> 
+        <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->         
         <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
-    </head>
-    <body class="">
-        <div class="container">
-            <div class="row bordered-highlighted-box">
-                <div class="col-md-12 col-sm-12 col-xs-12 col-lg-12">
+    <![endif]-->         
+    </head>     
+    <body class=""> 
+        <div class="container"> 
+            <div class="row bordered-highlighted-box"> 
+                <div class="col-md-12 col-sm-12 col-xs-12 col-lg-12"> 
                     <h1 class="orange">Checklist</h1> 
-                </div>
-                <div class="col-sm-12 col-xs-12 col-md-6 col-lg-6">
-                    <ul class="checklist-bullet">
+                </div>                 
+                <div class="col-sm-12 col-xs-12 col-md-6 col-lg-6"> 
+                    <ul class="checklist-bullet-orange"> 
                         <li>I have had a fall but not seen
                             anyone about it&nbsp;
-                            <br>
-                        </li>
+                            <br> 
+                        </li>                         
                         <li>My GP hasn’t reviewed my
                             medication in the past year&nbsp;
-                            <br>
-                        </li>
+                            <br> 
+                        </li>                         
                         <li>I often need to get up in the
                             night to go to the loo&nbsp;
-                            <br>
-                        </li>
+                            <br> 
+                        </li>                         
                         <li>I am probably not as active
                             as doctors recommend (30
                             minutes moderate activity
                             five times a week).&nbsp;
-                            <br>
-                        </li>
+                            <br> 
+                        </li>                         
                         <li>I sometimes feel dizzy or
                             light-headed on standing
                             or walking&nbsp;
-                            <br>
-                        </li>
+                            <br> 
+                        </li>                         
                         <li>I struggle with basic
                             maintenance on my home&nbsp;
-                            <br>
-                        </li>
+                            <br> 
+                        </li>                         
                         <li>I wear bi-focals or vari-focals&nbsp;
-                            <br>
-                        </li>
+                            <br> 
+                        </li>                         
                         <li>I haven’t had an eye test in
                             the past 12 months&nbsp;
-                            <br>
-                        </li>
+                            <br> 
+                        </li>                         
                         <li>I sometimes feel weak
                             when I get up from a chair or
                             the bed&nbsp;
-                            <br>
-                        </li>
+                            <br> 
+                        </li>                         
                         <li>A bit of clutter has built up at
                             home over the years&nbsp;
-                            <br>
-                        </li>
+                            <br> 
+                        </li>                         
                         <li>I probably don’t drink
                             enough fluids (1.6 litres/3
                             pints a day for women; 2
                             litres/3.5 pints for men).
-                            <br>
-                        </li>
+                            <br> 
+                        </li>                         
                         <li>My slippers have that
                             ‘lived-in’ look&nbsp;
-                            <br>
-                        </li>
+                            <br> 
+                        </li>                         
                         <li>Taking care of my feet is
                             quite difficult these days&nbsp;
-                            <br>
-                        </li>
-                    </ul>
-                </div>
-                <div class="col-sm-12 col-xs-12 col-md-6 col-lg-6">
-                    <ul class="checklist-bullet">
+                            <br> 
+                        </li>                         
+                    </ul>                     
+                </div>                 
+                <div class="col-sm-12 col-xs-12 col-md-6 col-lg-6"> 
+                    <ul class="checklist-bullet-orange"> 
                         <li>I have a long-term condition
                             such as Parkinson’s, heart
                             disease/stroke, arthritis,
                             COPD, diabetes, dementia&nbsp;
-                            <br>
-                        </li>
+                            <br> 
+                        </li>                         
                         <li>I save electricity by turning
                             off unnecessary lights&nbsp;
-                            <br>
-                        </li>
+                            <br> 
+                        </li>                         
                         <li>My alcohol intake is
                             probably more than GPs’
                             recommended limits (2-3
                             units a day for women,
                             3-4 for men)&nbsp;
-                            <br>
-                        </li>
+                            <br> 
+                        </li>                         
                         <li>I don’t get out as much as I’d
                             like because I worry about
                             tripping, I feel unsteady&nbsp;
-                            <br>
-                        </li>
+                            <br> 
+                        </li>                         
                         <li>If I had a fall I would probably
                             be too embarrassed to tell
                             anyone&nbsp;
-                            <br>
-                        </li>
+                            <br> 
+                        </li>                         
                         <li>I often get my feet tangled
                             up in things that could trip
                             me; my pets or grandchildren
                             running around worry me
                             sometimes: they make me
                             feel wobbly!&nbsp;
-                            <br>
-                        </li>
+                            <br> 
+                        </li>                         
                         <li>I am not always that warm
                             at home
-                            <br>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </div>
+                            <br> 
+                        </li>                         
+                    </ul>                     
+                </div>                 
+            </div>             
+        </div>         
         <!-- Bootstrap core JavaScript
-    ================================================== -->
-        <!-- Placed at the end of the document so the pages load faster -->
-        <script src="assets/js/jquery.min.js"></script>
-        <script src="bootstrap/js/bootstrap.min.js"></script>
-        <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-        <script src="assets/js/ie10-viewport-bug-workaround.js"></script>
-    </body>
+    ================================================== -->         
+        <!-- Placed at the end of the document so the pages load faster -->         
+        <script src="assets/js/jquery.min.js"></script>         
+        <script src="bootstrap/js/bootstrap.min.js"></script>         
+        <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->         
+        <script src="assets/js/ie10-viewport-bug-workaround.js"></script>         
+    </body>     
 </html>
