--- a/06.html
+++ b/06.html
@@ -1,29 +1,30 @@
-<!DOCTYPE html>
-<html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta name="description" content="">
-        <meta name="author" content="">
-        <title>06</title>
-        <!-- Bootstrap core CSS -->
-        <link href="bootstrap/css/bootstrap.css" rel="stylesheet">
-        <!-- Custom styles for this template -->
-        <link href="style.css" rel="stylesheet">
-        <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+<!DOCTYPE html> 
+<html lang="en"> 
+    <head> 
+        <meta charset="utf-8"> 
+        <meta http-equiv="X-UA-Compatible" content="IE=edge"> 
+        <meta name="viewport" content="width=device-width, initial-scale=1"> 
+        <meta name="description" content=""> 
+        <meta name="author" content=""> 
+        <title>06</title>         
+        <!-- Bootstrap core CSS -->         
+        <link href="bootstrap/css/bootstrap.css" rel="stylesheet"> 
+        <!-- Custom styles for this template -->         
+        <link href="style.css" rel="stylesheet"> 
+        <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->         
         <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
-    </head>
-    <body class="">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-12 col-sm-12 col-xs-12 col-lg-12">
+    <![endif]-->         
+    </head>     
+    <body>
+        <a name="03"></a> 
+        <div class="container"> 
+            <div class="row"> 
+                <div class="col-md-12 col-sm-12 col-xs-12 col-lg-12"> 
                     <h1 class="orange">How to reduce your risk</h1> 
-                </div>
-                <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+                </div>                 
+                <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12"> 
                     <h2 class="grey">Looking at photographs taken 30
 years ago reveals how our bodies have
 changed on the outside – admittedly,
@@ -31,12 +32,12 @@ not always a joyful lesson! But what
 about the changes on the inside?
 We can’t see them, but they can put us
 at greater risk of falling</h2> 
-                </div>
-                <div class="col-md-6 col-lg-6 col-sm-12 col-xs-12">
+                </div>                 
+                <div class="col-md-6 col-lg-6 col-sm-12 col-xs-12"> 
                     <p>We can’t stop the ageing
 process, but we can counteract
 some of the effects with a few
-gentle tweaks to our lifestyle.&nbsp;</p>
+gentle tweaks to our lifestyle.&nbsp;</p> 
                     <p>Previous falls (with or without
 injury) are one of the biggest
 independent risk factors
@@ -44,30 +45,30 @@ for falling again; guidelines
 recommend that if you have or
 have had a fall you should get
 yourself reviewed if this has not
-been done automatically.&nbsp;</p>
+been done automatically.&nbsp;</p> 
                     <p>Mention it to your GP or
 physiotherapist at your next
 routine appointment. If you are
 not seeing someone regularly,
 make a specific appointment to
-see someone to discuss it.<br></p>
-                </div>
-                <div class="col-sm-12 col-xs-12 col-md-6 col-lg-6">
-                    <img src="img/6a.jpg" class="img-responsive">
-                </div>
-                <div class="col-md-12 col-lg-12 col-sm-12 col-xs-12">
+see someone to discuss it.<br></p> 
+                </div>                 
+                <div class="col-sm-12 col-xs-12 col-md-6 col-lg-6"> 
+                    <img src="img/6a.jpg" class="img-responsive"> 
+                </div>                 
+                <div class="col-md-12 col-lg-12 col-sm-12 col-xs-12 spacer"> 
                     <img src="img/logo01.jpg">Read our home muscle-st
                     rengthening plan at  
-                    <a href="http://saga.co.uk/falls" target="_blank">saga.co.uk/falls</a>
-                </div>
-            </div>
-        </div>
+                    <a href="http://saga.co.uk/falls" target="_blank">saga.co.uk/falls</a> 
+                </div>                 
+            </div>             
+        </div>         
         <!-- Bootstrap core JavaScript
-    ================================================== -->
-        <!-- Placed at the end of the document so the pages load faster -->
-        <script src="assets/js/jquery.min.js"></script>
-        <script src="bootstrap/js/bootstrap.min.js"></script>
-        <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-        <script src="assets/js/ie10-viewport-bug-workaround.js"></script>
-    </body>
+    ================================================== -->         
+        <!-- Placed at the end of the document so the pages load faster -->         
+        <script src="assets/js/jquery.min.js"></script>         
+        <script src="bootstrap/js/bootstrap.min.js"></script>         
+        <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->         
+        <script src="assets/js/ie10-viewport-bug-workaround.js"></script>         
+    </body>     
 </html>
