--- a/08.html
+++ b/08.html
@@ -1,33 +1,33 @@
-<!DOCTYPE html>
-<html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta name="description" content="">
-        <meta name="author" content="">
-        <title>08</title>
-        <!-- Bootstrap core CSS -->
-        <link href="bootstrap/css/bootstrap.css" rel="stylesheet">
-        <!-- Custom styles for this template -->
-        <link href="style.css" rel="stylesheet">
-        <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+<!DOCTYPE html> 
+<html lang="en"> 
+    <head> 
+        <meta charset="utf-8"> 
+        <meta http-equiv="X-UA-Compatible" content="IE=edge"> 
+        <meta name="viewport" content="width=device-width, initial-scale=1"> 
+        <meta name="description" content=""> 
+        <meta name="author" content=""> 
+        <title>08</title>         
+        <!-- Bootstrap core CSS -->         
+        <link href="bootstrap/css/bootstrap.css" rel="stylesheet"> 
+        <!-- Custom styles for this template -->         
+        <link href="style.css" rel="stylesheet"> 
+        <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->         
         <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
-    </head>
-    <body class="">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-6 col-lg-6 col-sm-12 col-xs-12">
-                    <h3 class="orange">Rushing for the loo</h3>
+    <![endif]-->         
+    </head>     
+    <body> 
+        <div class="container"> 
+            <div class="row"> 
+                <div class="col-md-6 col-lg-6 col-sm-12 col-xs-12"> 
+                    <h3 class="orange">Rushing for the loo</h3> 
                     <p>If you hurry, especially in the
 dark at night, it can make falls
 more likely. And 3-6 million
 people over 60 in the UK have
-urinary incontinence problems.<br></p>
-                    <p><b>What can I do <img src="img/question-mark.png"></b></p>
+urinary incontinence problems.<br></p> 
+                    <p><b>What can I do <img src="img/question-mark.png"></b></p> 
                     <p>Incontinence can be improved
 and sometimes cured – talk
 to your continence nurse
@@ -37,8 +37,8 @@ continence clinic, which can
 recommend exercises and
 give advice. Some continence
 medications can also make you
-dizzy – let them know.<a href="http://csp.org.uk/conditions/incontinence" target="_blank"><br><br>csp.org.uk/conditions/incontinence</a><br></p>
-                    <h3 class="orange">Multiple medications</h3>
+dizzy – let them know.<a href="http://csp.org.uk/conditions/incontinence" target="_blank"><br><br>csp.org.uk/conditions/incontinence</a><br></p> 
+                    <h3 class="orange">Multiple medications</h3> 
                     <p>The older we get, the more
 likely we are to be prescribed
 medications for several different
@@ -50,23 +50,23 @@ associated with dizziness,
 drops in blood pressure when
 you stand up, or sleepiness –
 all of which can raise the risk
-of falling. </p>
-                </div>
-                <div class="col-md-6 col-lg-6 col-sm-12 col-xs-12 leveling-padding">
+of falling. </p> 
+                </div>                 
+                <div class="col-md-6 col-lg-6 col-sm-12 col-xs-12 leveling-padding"> 
                     <p>Talk to your GP if you are
 experiencing any of these
 problems and ask whether your
-medication should be adjusted.</p>
-                    <img src="img/separator.png" class="center-block" />
+medication should be adjusted.</p> 
+                    <img src="img/separator.png" class="center-block" /> 
                     <p class="cursive-text text-center">“It was only when a new young
 GP started at the surgery
 that I had all my medication
 reviewed , and she reduced
 some of my doses. I feel much
 better and no longer feel
-so dizzy when I stand up.”<br></p>
-                    <img src="img/separator02.png" class="center-block" />
-                    <p><b>What can I do <img src="img/question-mark.png"></b></p>
+so dizzy when I stand up.”<br></p> 
+                    <img src="img/separator02.png" class="center-block" /> 
+                    <p><b>What can I do <img src="img/question-mark.png"></b></p> 
                     <p>Never stop taking any prescribed
 medication suddenly. If you
 suspect one or more of your
@@ -81,20 +81,20 @@ alcohol intake: you may find you
 can’t drink the same quantity
 you used to without feeling dizzy
 or ill, and it may interact with
-prescribed medications.<br></p>
-                </div>
-                <div class="col-md-12 col-lg-12 col-sm-12 col-xs-12">
+prescribed medications.<br></p> 
+                </div>                 
+                <div class="col-md-12 col-lg-12 col-sm-12 col-xs-12 spacer"> 
                     <img src="img/logo01.jpg">Is it time for an eye test? Find out at 
-                    <a href="http://saga.co.uk/falls" target="_blank">saga.co.uk/falls</a>
-                </div>
-            </div>
-        </div>
+                    <a href="http://saga.co.uk/falls" target="_blank">saga.co.uk/falls</a> 
+                </div>                 
+            </div>             
+        </div>         
         <!-- Bootstrap core JavaScript
-    ================================================== -->
-        <!-- Placed at the end of the document so the pages load faster -->
-        <script src="assets/js/jquery.min.js"></script>
-        <script src="bootstrap/js/bootstrap.min.js"></script>
-        <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-        <script src="assets/js/ie10-viewport-bug-workaround.js"></script>
-    </body>
+    ================================================== -->         
+        <!-- Placed at the end of the document so the pages load faster -->         
+        <script src="assets/js/jquery.min.js"></script>         
+        <script src="bootstrap/js/bootstrap.min.js"></script>         
+        <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->         
+        <script src="assets/js/ie10-viewport-bug-workaround.js"></script>         
+    </body>     
 </html>
