--- a/12.html
+++ b/12.html
@@ -1,84 +1,85 @@
-<!DOCTYPE html>
-<html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta name="description" content="">
-        <meta name="author" content="">
-        <title>12</title>
-        <!-- Bootstrap core CSS -->
-        <link href="bootstrap/css/bootstrap.css" rel="stylesheet">
-        <!-- Custom styles for this template -->
-        <link href="style.css" rel="stylesheet">
-        <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+<!DOCTYPE html> 
+<html lang="en"> 
+    <head> 
+        <meta charset="utf-8"> 
+        <meta http-equiv="X-UA-Compatible" content="IE=edge"> 
+        <meta name="viewport" content="width=device-width, initial-scale=1"> 
+        <meta name="description" content=""> 
+        <meta name="author" content=""> 
+        <title>12</title>         
+        <!-- Bootstrap core CSS -->         
+        <link href="bootstrap/css/bootstrap.css" rel="stylesheet"> 
+        <!-- Custom styles for this template -->         
+        <link href="style.css" rel="stylesheet"> 
+        <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->         
         <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
-    </head>
-    <body class="">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-12 col-sm-12 col-xs-12 col-lg-12">
+    <![endif]-->         
+    </head>     
+    <body>
+        <a name="05"></a> 
+        <div class="container"> 
+            <div class="row"> 
+                <div class="col-md-12 col-sm-12 col-xs-12 col-lg-12"> 
                     <h1 class="cyan">Stay safe out and about</h1> 
-                </div>
-                <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+                </div>                 
+                <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12"> 
                     <h2 class="grey">There’s no reason to curtail your
 activities away from home because
 you are worried about falling, but it
 makes sense to take some simple
 precautions</h2> 
-                </div>
-                <div class="col-md-6 col-lg-6 col-sm-12 col-xs-12">
-                    <h3 class="cyan">In the street</h3>
+                </div>                 
+                <div class="col-md-6 col-lg-6 col-sm-12 col-xs-12"> 
+                    <h3 class="cyan">In the street</h3> 
                     <p>• Take your time and don’t rush.
 Scan an area for trip hazards –
 cracked pavements, obstacles
 and uneven surfaces – before
-walking.</p>
+walking.</p> 
                     <p>• Carrying shopping bags can
 obstruct your view of the
 pavement; consider using
 a rucksack instead (it’s also
-better for your back).</p>
+better for your back).</p> 
                     <p>• Watch out for shop entrances
 with ‘lipped’ door frames,
 especially if you’re stepping
 inside out of bright light; give
 your eyes time to adjust to the
-darker conditions.<br></p>
-                </div>
-                <div class="col-md-6 col-lg-6 col-sm-12 col-xs-12 leveling-padding">
+darker conditions.<br></p> 
+                </div>                 
+                <div class="col-md-6 col-lg-6 col-sm-12 col-xs-12 leveling-padding"> 
                     <p>• Watch out for subtle changes of gradient, especially near
-pedestrian crossings.&nbsp;</p>
+pedestrian crossings.&nbsp;</p> 
                     <p>• Keep your bus pass/money
 near to hand so you don’t have
 to root around in your bag.
 That way you’ll stand a better
-chance of boarding safely.&nbsp;</p>
+chance of boarding safely.&nbsp;</p> 
                     <p>• Don’t be afraid to ask the
 bus driver to wait until you’re
-seated before moving off.</p>
+seated before moving off.</p> 
                     <p>• Don’t worry if you think
 you’re being slow and
 inconveniencing others:
 staying safe is more important.
 Chances are that no one has
-noticed anyway.&nbsp;<br></p>
-                </div>
-                <div class="col-md-12 col-lg-12 col-sm-12 col-xs-12">
+noticed anyway.&nbsp;<br></p> 
+                </div>                 
+                <div class="col-md-12 col-lg-12 col-sm-12 col-xs-12 spacer"> 
                     <img src="img/logo01.jpg">Find the latest health and wellbeing information at 
-                    <a href="http://saga.co.uk/falls" target="_blank">saga.co.uk/falls</a>
-                </div>
-            </div>
-        </div>
+                    <a href="http://saga.co.uk/falls" target="_blank">saga.co.uk/falls</a> 
+                </div>                 
+            </div>             
+        </div>         
         <!-- Bootstrap core JavaScript
-    ================================================== -->
-        <!-- Placed at the end of the document so the pages load faster -->
-        <script src="assets/js/jquery.min.js"></script>
-        <script src="bootstrap/js/bootstrap.min.js"></script>
-        <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-        <script src="assets/js/ie10-viewport-bug-workaround.js"></script>
-    </body>
+    ================================================== -->         
+        <!-- Placed at the end of the document so the pages load faster -->         
+        <script src="assets/js/jquery.min.js"></script>         
+        <script src="bootstrap/js/bootstrap.min.js"></script>         
+        <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->         
+        <script src="assets/js/ie10-viewport-bug-workaround.js"></script>         
+    </body>     
 </html>
