--- a/18.html
+++ b/18.html
@@ -1,67 +1,68 @@
-<!DOCTYPE html>
-<html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta name="description" content="">
-        <meta name="author" content="">
-        <title>18</title>
-        <!-- Bootstrap core CSS -->
-        <link href="bootstrap/css/bootstrap.css" rel="stylesheet">
-        <!-- Custom styles for this template -->
-        <link href="style.css" rel="stylesheet">
-        <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+<!DOCTYPE html> 
+<html lang="en"> 
+    <head> 
+        <meta charset="utf-8"> 
+        <meta http-equiv="X-UA-Compatible" content="IE=edge"> 
+        <meta name="viewport" content="width=device-width, initial-scale=1"> 
+        <meta name="description" content=""> 
+        <meta name="author" content=""> 
+        <title>18</title>         
+        <!-- Bootstrap core CSS -->         
+        <link href="bootstrap/css/bootstrap.css" rel="stylesheet"> 
+        <!-- Custom styles for this template -->         
+        <link href="style.css" rel="stylesheet"> 
+        <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->         
         <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
-    </head>
-    <body class="">
-        <div class="container">
-            <div class="row">
-                <div class="col-sm-12 col-xs-12 col-md-12 col-lg-12">
+    <![endif]-->         
+    </head>     
+    <body>
+        <a name="08"></a> 
+        <div class="container"> 
+            <div class="row"> 
+                <div class="col-sm-12 col-xs-12 col-md-12 col-lg-12"> 
                     <h1 class="violet"> Never step on a
     banana skin!<br><span style="font-size:20px;">(and other ways to avoid slips and trips)</span></h1> 
-                </div>
-                <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+                </div>                 
+                <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12"> 
                     <h2 class="grey"><img align="right" src="img/18f.png" style="vertical-align: top; margin: 0 0 10px 10px;" />It’s only cartoon characters who slip
 on banana skins – that risk is rather
 obvious to the rest of us. But how
 many other common slipping and
 tripping risks do we ignore?</h2> 
-                </div>
-                <div class="col-sm-12 col-xs-12 col-md-12 col-lg-12">
-                    <h3 class="violet">Here’s our top five:</h3>
+                </div>                 
+                <div class="col-sm-12 col-xs-12 col-md-12 col-lg-12"> 
+                    <h3 class="violet">Here’s our top five:</h3> 
                     <p><img align="left" src="img/18a.png" width="50" style="vertical-align: top; margin-right: 10px;"><b>Badly fitting shoes.</b> Our feet change shape as we age and
 lose some feeling and flexibility, so a well-fitted shoe is vital;
 what fitted 10 years ago may not be right any more.
-See the buying guide opposite<br></p>
+See the buying guide opposite<br></p> 
                     <p><img align="left" src="img/18b.png" width="50" style="vertical-align: top; margin-right: 10px;"><b>Trailing clothes.</b> Always take time to tie belts or cords on
 clothes and dressing gowns – or remove them altogether.
-Hem trousers that are too long.<br></p>
+Hem trousers that are too long.<br></p> 
                     <p><img align="left" src="img/18c.png" width="50" style="vertical-align: top; margin-right: 10px;"><b>‘Shuffly’ walking.</b> It’s easy to get into the habit of not lifting
 your foot as high as you used to when walking, but it increases
-your chance of tripping. The exercises on page 16-17 will help.<br></p>
+your chance of tripping. The exercises on page 16-17 will help.<br></p> 
                     <p><img align="left" src="img/18d.png" width="50" style="vertical-align: top; margin-right: 10px;"><b>Worn-out slippers.</b> They may be like old friends, but it’s
 time to say goodbye to your slippers if they have holes in their
 soles, frayed uppers, broken-down backs or the fit is ‘sloppy’.
-Slippers should fasten, stay on and provide grip.<br></p>
+Slippers should fasten, stay on and provide grip.<br></p> 
                     <p><img align="left" src="img/18e.png" width="50" style="vertical-align: top; margin-right: 10px;"><b>Walking in socks/tights on hard floors.</b> Never, ever do it
-(wear the new slippers instead!)<br></p>
-                </div>
-                <div class="col-md-12 col-lg-12 col-sm-12 col-xs-12 spacer">
+(wear the new slippers instead!)<br></p> 
+                </div>                 
+                <div class="col-md-12 col-lg-12 col-sm-12 col-xs-12 spacer"> 
                     <img src="img/logo01.jpg">Read our guide to treating common foot problems at 
-                    <a href="http://saga.co.uk/falls" target="_blank">saga.co.uk/falls</a>
-                </div>
-            </div>
-        </div>
+                    <a href="http://saga.co.uk/falls" target="_blank">saga.co.uk/falls</a> 
+                </div>                 
+            </div>             
+        </div>         
         <!-- Bootstrap core JavaScript
-    ================================================== -->
-        <!-- Placed at the end of the document so the pages load faster -->
-        <script src="assets/js/jquery.min.js"></script>
-        <script src="bootstrap/js/bootstrap.min.js"></script>
-        <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-        <script src="assets/js/ie10-viewport-bug-workaround.js"></script>
-    </body>
+    ================================================== -->         
+        <!-- Placed at the end of the document so the pages load faster -->         
+        <script src="assets/js/jquery.min.js"></script>         
+        <script src="bootstrap/js/bootstrap.min.js"></script>         
+        <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->         
+        <script src="assets/js/ie10-viewport-bug-workaround.js"></script>         
+    </body>     
 </html>
