--- a/24.html
+++ b/24.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1"> 
         <meta name="description" content=""> 
         <meta name="author" content=""> 
-        <title>14</title>         
+        <title>24</title>         
         <!-- Bootstrap core CSS -->         
         <link href="bootstrap/css/bootstrap.css" rel="stylesheet"> 
         <!-- Custom styles for this template -->         
@@ -18,28 +18,29 @@
     <![endif]-->         
     </head>     
     <body>
-        <a name="06"></a> 
+        <a name="11"></a> 
         <div class="container"> 
             <div class="row"> 
                 <div class="col-md-12 col-sm-12 col-xs-12 col-lg-12"> 
-                    <h1 class="aquamarine">Keep moving for
-a balanced life</h1> 
+                    <h1 class="dark-orange">Help prevent other people falling</h1> 
                 </div>                 
                 <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12"> 
-                    <h2 class="grey">We’ve seen how ageing impairs
-balance, muscles and joints.
-And this is made worse if we spend
-long periods sitting down</h2> 
+                    <h2 class="grey">People at risk of falls are often
+reluctant to discuss it because they
+fear their independence will be taken
+away from them. It’s up to us – their
+friends, relatives and neighbours – to
+persuade them that the opposite is
+true: that by taking positive steps to
+prevent falls they will preserve their
+health and independence for longer</h2> 
                 </div>                 
                 <div class="col-sm-12 col-xs-12 col-md-12 col-lg-12"> 
-                    <p>The more active you can be – and the more you break up your day
-so you’re not sitting for extended periods – the more you can offset
-the effects of ageing.</p> 
-                    <img src="img/14a.jpg" class="img-responsive" /> 
+                    <img src="img/24a.jpg" class="img-responsive" /> 
                 </div>                 
                 <div class="col-md-12 col-lg-12 col-sm-12 col-xs-12 spacer"> 
-                    <img src="img/logo01.jpg">Find out the basics, and the benefits, of t’ai chi at 
-                    <a href="http://saga.co.uk/falls" target="_blank">saga.co.uk/falls</a> 
+                    <img src="img/logo01.jpg">Discover how to train your muscles to aid balance at&nbsp;
+                    <a href="http://saga.co.uk/falls" target="_blank">saga.co.uk/falls</a>
                 </div>                 
             </div>             
         </div>         
