--- a/27.html
+++ b/27.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1"> 
         <meta name="description" content=""> 
         <meta name="author" content=""> 
-        <title>14</title>         
+        <title>27</title>         
         <!-- Bootstrap core CSS -->         
         <link href="bootstrap/css/bootstrap.css" rel="stylesheet"> 
         <!-- Custom styles for this template -->         
@@ -17,30 +17,12 @@
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->         
     </head>     
-    <body>
-        <a name="06"></a> 
+    <body class=""> 
         <div class="container"> 
-            <div class="row"> 
-                <div class="col-md-12 col-sm-12 col-xs-12 col-lg-12"> 
-                    <h1 class="aquamarine">Keep moving for
-a balanced life</h1> 
-                </div>                 
-                <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12"> 
-                    <h2 class="grey">We’ve seen how ageing impairs
-balance, muscles and joints.
-And this is made worse if we spend
-long periods sitting down</h2> 
-                </div>                 
-                <div class="col-sm-12 col-xs-12 col-md-12 col-lg-12"> 
-                    <p>The more active you can be – and the more you break up your day
-so you’re not sitting for extended periods – the more you can offset
-the effects of ageing.</p> 
-                    <img src="img/14a.jpg" class="img-responsive" /> 
-                </div>                 
-                <div class="col-md-12 col-lg-12 col-sm-12 col-xs-12 spacer"> 
-                    <img src="img/logo01.jpg">Find out the basics, and the benefits, of t’ai chi at 
-                    <a href="http://saga.co.uk/falls" target="_blank">saga.co.uk/falls</a> 
-                </div>                 
+            <div class="row white" style="background-image: url(&quot;img/27a.jpg&quot;); background-color: #75663A; height: 700px;"> 
+                <div class="col-sm-12 col-xs-12 col-md-6 col-lg-6 leveling-padding"> 
+                    <img src="img/27b.png" class="img-responsive">                                                                                                                               
+                </div>                                  
             </div>             
         </div>         
         <!-- Bootstrap core JavaScript
