--- a/04.html
+++ b/04.html
@@ -1,50 +1,51 @@
-<!DOCTYPE html>
-<html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta name="description" content="">
-        <meta name="author" content="">
-        <title>04</title>
-        <!-- Bootstrap core CSS -->
-        <link href="bootstrap/css/bootstrap.css" rel="stylesheet">
-        <!-- Custom styles for this template -->
-        <link href="style.css" rel="stylesheet">
-        <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+<!DOCTYPE html> 
+<html lang="en"> 
+    <head> 
+        <meta charset="utf-8"> 
+        <meta http-equiv="X-UA-Compatible" content="IE=edge"> 
+        <meta name="viewport" content="width=device-width, initial-scale=1"> 
+        <meta name="description" content=""> 
+        <meta name="author" content=""> 
+        <title>04</title>         
+        <!-- Bootstrap core CSS -->         
+        <link href="bootstrap/css/bootstrap.css" rel="stylesheet"> 
+        <!-- Custom styles for this template -->         
+        <link href="style.css" rel="stylesheet"> 
+        <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->         
         <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
-    </head>
-    <body class="">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-12 col-sm-12 col-xs-12 col-lg-12">
+    <![endif]-->         
+    </head>     
+    <body>
+        <a name="02"></a> 
+        <div class="container"> 
+            <div class="row"> 
+                <div class="col-md-12 col-sm-12 col-xs-12 col-lg-12"> 
                     <h1 class="orange">Am I at risk of a fall?</h1> 
-                </div>
-                <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+                </div>                 
+                <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12"> 
                     <h2 class="grey">Everyone is more at risk of a fall as
 they age; it’s a big cause of hospital
 admissions and can result in serious
 injuries and long-term complications.
 Falling can also contribute to a loss of
 confidence and independence</h2> 
-                </div>
-                <div class="col-sm-12 col-xs-12 col-md-6 col-lg-6">
-                    <img src="img/4a.jpg" class="img-responsive">
-                </div>
-                <div class="col-md-6 col-lg-6 col-sm-12 col-xs-12">
+                </div>                 
+                <div class="col-sm-12 col-xs-12 col-md-6 col-lg-6"> 
+                    <img src="img/4a.jpg" class="img-responsive"> 
+                </div>                 
+                <div class="col-md-6 col-lg-6 col-sm-12 col-xs-12"> 
                     <p>Clearly we can’t change
 our biological age, but by
 understanding what puts us at
 risk, we can take preventative
-action.&nbsp;</p>
+action.&nbsp;</p> 
                     <p>If you’ve fallen before, you’re
 right at the top of the risk list for
 another one, so it’s even more
 vital to take the steps outlined in
-this booklet.&nbsp;</p>
+this booklet.&nbsp;</p> 
                     <p>So take a look at the checklist
 opposite and see how many
 you tick. Then read the following
@@ -53,21 +54,21 @@ risk increases as we age – and
 the many positive and easy
 steps we can all take to cut that
 risk and protect our freedom,
-whether we’re 65 or 95!<br></p>
-                </div>
-                <div class="col-md-12 col-lg-12 col-sm-12 col-xs-12">
+whether we’re 65 or 95!<br></p> 
+                </div>                 
+                <div class="col-md-12 col-lg-12 col-sm-12 col-xs-12 spacer"> 
                     <img src="img/logo01.jpg">Read our home muscle-st
                     rengthening plan at 
-                    <a href="http://saga.co.uk/falls" target="_blank">saga.co.uk/falls</a>
-                </div>
-            </div>
-        </div>
+                    <a href="http://saga.co.uk/falls" target="_blank">saga.co.uk/falls</a> 
+                </div>                 
+            </div>             
+        </div>         
         <!-- Bootstrap core JavaScript
-    ================================================== -->
-        <!-- Placed at the end of the document so the pages load faster -->
-        <script src="assets/js/jquery.min.js"></script>
-        <script src="bootstrap/js/bootstrap.min.js"></script>
-        <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-        <script src="assets/js/ie10-viewport-bug-workaround.js"></script>
-    </body>
+    ================================================== -->         
+        <!-- Placed at the end of the document so the pages load faster -->         
+        <script src="assets/js/jquery.min.js"></script>         
+        <script src="bootstrap/js/bootstrap.min.js"></script>         
+        <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->         
+        <script src="assets/js/ie10-viewport-bug-workaround.js"></script>         
+    </body>     
 </html>
