--- a/16.html
+++ b/16.html
@@ -1,80 +1,81 @@
-<!DOCTYPE html>
-<html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta name="description" content="">
-        <meta name="author" content="">
-        <title>16</title>
-        <!-- Bootstrap core CSS -->
-        <link href="bootstrap/css/bootstrap.css" rel="stylesheet">
-        <!-- Custom styles for this template -->
-        <link href="style.css" rel="stylesheet">
-        <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+<!DOCTYPE html> 
+<html lang="en"> 
+    <head> 
+        <meta charset="utf-8"> 
+        <meta http-equiv="X-UA-Compatible" content="IE=edge"> 
+        <meta name="viewport" content="width=device-width, initial-scale=1"> 
+        <meta name="description" content=""> 
+        <meta name="author" content=""> 
+        <title>16</title>         
+        <!-- Bootstrap core CSS -->         
+        <link href="bootstrap/css/bootstrap.css" rel="stylesheet"> 
+        <!-- Custom styles for this template -->         
+        <link href="style.css" rel="stylesheet"> 
+        <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->         
         <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
-    </head>
-    <body class="">
-        <div class="container">
-            <div class="row">
-                <div class="col-sm-12 col-xs-12 col-md-12 col-lg-12">
+    <![endif]-->         
+    </head>     
+    <body>
+        <a name="07"></a> 
+        <div class="container"> 
+            <div class="row"> 
+                <div class="col-sm-12 col-xs-12 col-md-12 col-lg-12"> 
                     <h1 class="aquamarine"><span style="font-size: 110px;">6</span> exercises for strength and
 balance</h1> 
-                </div>
-                <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+                </div>                 
+                <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12"> 
                     <h2 class="grey">Try these six simple exercises two
 or three times a week – every day if
 you like – and you should soon notice
 improvements to your co-ordination
 and balance</h2> 
-                </div>
-                <div class="col-sm-12 col-xs-12 col-md-12 col-lg-12 text-center">
-                    <div class="blue-highlighted-box">
-                        <p><img src="img/16a.png" class="img-responsive center-block" width="70"></p>
-                        <p>• MAKE SURE THE CHAIR YOU USE IS STURDY</p>
-                        <p>• WEAR SUPPORTIVE SHOES</p>
+                </div>                 
+                <div class="col-sm-12 col-xs-12 col-md-12 col-lg-12 text-center"> 
+                    <div class="blue-highlighted-box"> 
+                        <p><img src="img/16a.png" class="img-responsive center-block" width="70"></p> 
+                        <p>• MAKE SURE THE CHAIR YOU USE IS STURDY</p> 
+                        <p>• WEAR SUPPORTIVE SHOES</p> 
                         <p>• IF YOU EXPERIENCE CHEST PAIN, DIZZINESS OR SEVERE
-SHORTNESS OF BREATH, STOP AND CALL YOUR GP OR CALL 111</p>
-                        <p>• A SLIGHT SORENESS THE DAY AFTER IS QUITE NORMAL</p>
-                    </div>
-                </div>
-                <div class="col-sm-12 col-xs-12 col-md-6 col-lg-6 leveling-padding">
-                    <img src="img/16b.png" class="img-responsive" />
-                    <h3 class="aquamarine">Heel Raises</h3>
+SHORTNESS OF BREATH, STOP AND CALL YOUR GP OR CALL 111</p> 
+                        <p>• A SLIGHT SORENESS THE DAY AFTER IS QUITE NORMAL</p> 
+                    </div>                     
+                </div>                 
+                <div class="col-sm-12 col-xs-12 col-md-6 col-lg-6 leveling-padding"> 
+                    <img src="img/16b.png" class="img-responsive" /> 
+                    <h3 class="aquamarine">Heel Raises</h3> 
                     <p>Stand tall, holding the back of
 a sturdy kitchen-type chair or
 kitchen sink, then lift your heels
 off the floor, taking your weight
 onto your big toes. Hold for
 three seconds, then lower with
-control. Repeat 10 times.<br></p>
-                </div>
-                <div class="col-sm-12 col-xs-12 col-md-6 col-lg-6 leveling-padding">
-                    <img src="img/16c.png" class="img-responsive">
-                    <h3 class="aquamarine">Toe Raises</h3>
+control. Repeat 10 times.<br></p> 
+                </div>                 
+                <div class="col-sm-12 col-xs-12 col-md-6 col-lg-6 leveling-padding"> 
+                    <img src="img/16c.png" class="img-responsive"> 
+                    <h3 class="aquamarine">Toe Raises</h3> 
                     <p>Stand tall holding the same
 support, then raise your
 toes – taking your weight on
 your heels. Don’t stick your
 bottom out. Hold for three
 seconds, then lower with
-control. Repeat 10 times<br></p>
-                </div>
-                <div class="col-md-12 col-lg-12 col-sm-12 col-xs-12">
+control. Repeat 10 times<br></p> 
+                </div>                 
+                <div class="col-md-12 col-lg-12 col-sm-12 col-xs-12 spacer"> 
                     <img src="img/logo01.jpg">Find a wealth of health information at 
-                    <a href="http://saga.co.uk/falls" target="_blank">saga.co.uk/falls</a>
-                </div>
-            </div>
-        </div>
+                    <a href="http://saga.co.uk/falls" target="_blank">saga.co.uk/falls</a> 
+                </div>                 
+            </div>             
+        </div>         
         <!-- Bootstrap core JavaScript
-    ================================================== -->
-        <!-- Placed at the end of the document so the pages load faster -->
-        <script src="assets/js/jquery.min.js"></script>
-        <script src="bootstrap/js/bootstrap.min.js"></script>
-        <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-        <script src="assets/js/ie10-viewport-bug-workaround.js"></script>
-    </body>
+    ================================================== -->         
+        <!-- Placed at the end of the document so the pages load faster -->         
+        <script src="assets/js/jquery.min.js"></script>         
+        <script src="bootstrap/js/bootstrap.min.js"></script>         
+        <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->         
+        <script src="assets/js/ie10-viewport-bug-workaround.js"></script>         
+    </body>     
 </html>
